2006-10-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Fix allocation problem on tapedev.

2006-10-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c (free_split_buffer): Correct free.

2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Fix formating.

2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c: Quote amname.

2006-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/dgram.c (dgram_cat),
	  common-src/packet.c (pkt_init, pkt_cat): Works correctly with
						   vsnprintf returning -1.

2006-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Improve message for dump larger than available
				tape space if runtapes > 1 and splitsize == 0.

2006-10-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (wait_children): Don't crash if dumper->chunker
					       is NULL

2006-10-04  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Call security_recvpkt() on A_SENDNACK
				 and dup P_REQ.
	* common-src/security-util.c: Improve message.

2006-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcleanupdisk.c: Accept -o arguments.
	* server-src/amcleanup.sh.in: Add missing 'shift' for non-linux system.
				      Accept -o arguments.

2006-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amoverview.pl.in: Fix parsing of time field from amadmin.

2006-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amidxtaped.c, restore-src/restore.c,
	  server-src/amcheck.c, server-src/amflush.c,
	  server-src/amlabel.c, server-src/taper.c,
	  server-src/taperscan.c: Check for CNF_TAPEDEV == NULL.

2006-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c: Don't set CNF_TAPEDEV to DEFAULT_TAPE_DEVICE.
	* configure.in: Don't set DEFAULT_TAPE_DEVICE.

2006-09-29  Jean-Louis Martineau <martineau@zmanda.com>